--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,5 @@
-Django==1.9.9
-djangorestframework==3.4.1
+asgiref==3.2.3
+Django==3.0.3
+djangorestframework==3.11.0
+pytz==2019.3
+sqlparse==0.3.0
