--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-asgiref==3.2.3
-coverage==5.0.3
-Django==3.0.3
+asgiref==3.2.7
+coverage==5.0.4
+Django==3.0.4
 django-debug-toolbar==2.2
+django-debug-toolbar-request-history==0.1.1
 djangorestframework==3.11.0
 pytz==2019.3
-sqlparse==0.3.0
+sqlparse==0.3.1
