--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 asgiref==3.2.7
-coverage==5.0.4
-Django==3.0.4
+coverage==5.1
+Django==3.0.5
 django-debug-toolbar==2.2
 django-debug-toolbar-request-history==0.1.1
 djangorestframework==3.11.0
 pytz==2019.3
 sqlparse==0.3.1
+whitenoise==5.0.1
