--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ backend/__pycache__/
 backend/backend/__pycache__/
 backend/pugorugh/__pycache__/
 backend/pugorugh/migrations/__pycache__/
+*.sqlite3
+
